tests/NormalTests/paczka1/small_fuzzy/80196903.err
Error in line 2: Oqcu S585 37,3
Error in line 5: 61roHH8am S585 52,6
